Updating docs for Travis build: https://travis-ci.org/gpc/grails-mail/builds/24738063

--- a/gapi/grails/plugin/mail/package-summary.html
+++ b/gapi/grails/plugin/mail/package-summary.html
@@ -118,6 +118,16 @@ Package grails.plugin.mail
         </TR>
 
         <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="MailMessageContentRenderer.PageRenderRequestCreator.html" title="class in grails/plugin/mail">MailMessageContentRenderer.PageRenderRequestCreator</A></B></TD>
+        <TD></TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
+        <TD WIDTH="15%"><B><A HREF="MailMessageContentRenderer.PageRenderResponseCreator.html" title="class in grails/plugin/mail">MailMessageContentRenderer.PageRenderResponseCreator</A></B></TD>
+        <TD></TD>
+        </TR>
+
+        <TR BGCOLOR="white" CLASS="TableRowColor">
         <TD WIDTH="15%"><B><A HREF="MailMessageContentRenderer.RenderEnvironment.html" title="class in grails/plugin/mail">MailMessageContentRenderer.RenderEnvironment</A></B></TD>
         <TD></TD>
         </TR>
