--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -36,6 +36,10 @@ All Classes
 <BR>
 <A HREF="grails/plugin/mail/MailMessageContentRenderer.html" title="class in grails.plugin.mail" target="classFrame">MailMessageContentRenderer</A>
 <BR>
+<A HREF="grails/plugin/mail/MailMessageContentRenderer.PageRenderRequestCreator.html" title="class in grails.plugin.mail.MailMessageContentRenderer" target="classFrame">MailMessageContentRenderer.PageRenderRequestCreator</A>
+<BR>
+<A HREF="grails/plugin/mail/MailMessageContentRenderer.PageRenderResponseCreator.html" title="class in grails.plugin.mail.MailMessageContentRenderer" target="classFrame">MailMessageContentRenderer.PageRenderResponseCreator</A>
+<BR>
 <A HREF="grails/plugin/mail/MailMessageContentRenderer.RenderEnvironment.html" title="class in grails.plugin.mail.MailMessageContentRenderer" target="classFrame">MailMessageContentRenderer.RenderEnvironment</A>
 <BR>
 <A HREF="grails/plugin/mail/MailService.html" title="class in grails.plugin.mail" target="classFrame">MailService</A>
